tests/NormalTests/paczka1/fuzzy1/15212818.err
Error in line 3: 3yNsqke A259 5,4
Error in line 7: ADxqYW S377 72,8
Error in line 28: miHTJLhY9 S377 35,15
Error in line 21: JXd9iYIW0A1 S380 51,4
Error in line 22: miHTJLhY9 A259 54,4
Error in line 30: JXd9iYIW0A1 S377 46,6
Error in line 9: S585 S377 66,7
